terraform-modules/secure-vpc-module/modules/vpc/main.tf
resource "aws_vpc" "main" {
   cidr_block = var.vpc_cidr
   enable_dns_support = true
   enable_dns_hostnames = true
   tags = {
      Name = "${var.name_prefix}-vpc"
   }
}

resource "aws_flow_log" "vpc_logs" {
   log_destination      = aws_cloudwatch_log_group.flow_logs.arn
   traffic_type         = "ALL"
   vpc_id               = aws_vpc.main.id
   log_destination_type = "cloud-watch-logs"

   depends_on = [aws_cloudwatch_log_group.flow_logs]
}

resource "aws_cloudwatch_log_group" "flow_logs" {
   name              = "/vpc/flowlogs/${var.name_prefix}"
   retention_in_days = 14
}

resource "aws_internet_gateway" "igw" {
   vpc_id = aws_vpc.main.id
   tags = {
      Name = "${var.name_prefix}-igw"
   }
}

resource "aws_subnet" "public" {
   count                   = length(var.public_subnet_cidrs)
   vpc_id                  = aws_vpc.main.id
   cidr_block              = var.public_subnet_cidrs[count.index]
   availability_zone       = var.availability_zones[count.index]
   map_public_ip_on_launch = true
   tags = {
      Name = "${var.name_prefix}-public-${count.index}"
   }
}

resource "aws_subnet" "private" {
   count             = length(var.private_subnet_cidrs)
   vpc_id            = aws_vpc.main.id
   cidr_block        = var.private_subnet_cidrs[count.index]
   availability_zone = var.availability_zones[count.index]
   tags = {
      Name = "${var.name_prefix}-private-${count.index}"
   }
}

resource "aws_eip" "nat" {
   count = length(var.public_subnet_cidrs)
   domain = "vpc"
   depends_on = [aws_internet_gateway.igw]
}

resource "aws_nat_gateway" "nat" {
   count = length(var.public_subnet_cidrs)
   allocation_id = aws_eip.nat[count.index].id
   subnet_id     = aws_subnet.public[count.index].id
   tags = {
      Name = "${var.name_prefix}-nat-${count.index}"
   }

   depends_on = [aws_internet_gateway.igw]
}

resource "aws_route_table" "public" {
   vpc_id = aws_vpc.main.id

   route {
      cidr_block = "0.0.0.0/0"
      gateway_id = aws_internet_gateway.igw.id
   }

   tags = {
      Name = "${var.name_prefix}-public-rt"
   }
}

resource "aws_route_table_association" "public" {
   count          = length(var.public_subnet_cidrs)
   subnet_id      = aws_subnet.public[count.index].id
   route_table_id = aws_route_table.public.id
}

resource "aws_route_table" "private" {
   count = length(var.private_subnet_cidrs)
   vpc_id = aws_vpc.main.id

   route {
      cidr_block     = "0.0.0.0/0"
      nat_gateway_id = aws_nat_gateway.nat[count.index].id
   }

   tags = {
      Name = "${var.name_prefix}-private-rt-${count.index}"
   }
}

resource "aws_route_table_association" "private" {
   count          = length(var.private_subnet_cidrs)
   subnet_id      = aws_subnet.private[count.index].id
   route_table_id = aws_route_table.private[count.index].id
}
